<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
    <LinearLayout
            android:id="@+id/reminderEdit"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/title"
                />
        <EditText android:id="@+id/title"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                />
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/body"
                />
        <EditText android:id="@+id/body"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:minLines="5"
                  android:scrollbars="vertical"
                  android:gravity="top"
                />
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/date"
                />
        <Button
                android:id="@+id/reminder_date"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                />
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/time"
                />
        <Button
                android:id="@+id/reminder_time"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                />
        <Button
                android:id="@+id/save"
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        <com.google.ads.AdView
                android:id="@+id/ad"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="a14f79d62bb5c4f"
                ads:refreshInterval="60"/>


    </LinearLayout>

</ScrollView>
