<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
    <RelativeLayout
            android:id="@+id/reminderView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
        <TextView
                android:id="@+id/lblTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                />
        <EditText android:id="@+id/title"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_alignLeft="@id/lblTitle"
                  android:layout_below="@id/lblTitle"
                  android:layout_centerHorizontal="true"
                />
        <TextView
                android:id="@+id/lblBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/body"
                android:layout_alignLeft="@id/title"
                android:layout_below="@id/title"
                android:layout_centerHorizontal="true"
                />
        <EditText
                android:id="@+id/body"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minLines="5"
                android:scrollbars="vertical"
                android:gravity="top"
                android:layout_alignLeft="@id/lblBody"
                android:layout_below="@id/lblBody"
                android:layout_centerHorizontal="true"
                />
        <TextView
                android:id="@+id/lblDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_alignLeft="@id/body"
                android:layout_below="@id/body"
                android:layout_centerHorizontal="true"
                />
        <Button
                android:id="@+id/reminder_date"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignLeft="@id/lblDate"
                android:layout_below="@id/lblDate"
                android:layout_centerHorizontal="true"
                />
        <TextView
                android:id="@+id/lblTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:layout_alignLeft="@id/reminder_date"
                android:layout_below="@id/reminder_date"
                android:layout_centerHorizontal="true"
                />
        <Button
                android:id="@+id/reminder_time"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignLeft="@id/lblTime"
                android:layout_below="@id/lblTime"
                android:layout_centerHorizontal="true"
                />

        <Button
                android:id="@+id/edit"
                android:text="@string/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/body"
                android:layout_below="@id/reminder_time"
                android:layout_centerHorizontal="true"
                />
        <Button
                android:id="@+id/delete"
                android:text="@string/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/body"
                android:layout_below="@id/reminder_time"
                android:layout_centerHorizontal="true"
                />
        <Button
                android:id="@+id/back_to_list"
                android:text="@string/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/reminder_time"
                android:layout_centerHorizontal="true"
                />

        <com.google.ads.AdView
                android:id="@+id/ad"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/edit"
                android:layout_below="@id/edit"
                ads:adSize="BANNER"
                ads:adUnitId="a14f79d62bb5c4f"
                ads:refreshInterval="60"/>

    </RelativeLayout>


</ScrollView>